--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: iiserk_app
-description: A new Flutter project.
+description: This is a Flutter Project for the new IISER Kolkata App.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
